run curl in the end

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,9 @@ jobs:
       run: go build -v ./...
   
   check:
+    needs: build
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - run: docker-compose up -d
+    - run: curl -X POST -d '{"username":"test","body":"adasd"}' http://localhost:3000/posts
