--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: go build -v ./...
     - name: Test
-      run: go test ./...
+      run: go test -v ./...
   
   check:
     needs: build
