--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - ./:/app
     depends_on:
       db:
         condition: service_healthy
