experiment: add live reload (#12)
* experiment: add live reload

* update Dockerfile to contain only the binary

* add air go image to `docker-compose.yaml`

* add healthcheck route

* update ci check action to call the docker image with only the binary

* fix: Dockerfile

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,4 @@ jobs:
       run: docker-compose ps
     - if: failure()
       run: docker-compose logs
+    - run: curl -X POST -d '{"username":"test","body":"adasd"}' http://localhost:8080/posts
