--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./internal/...
   
   check:
     needs: build
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Run project
-      run: make up
+      run: make ci
 
     - name: Set up Go for E2E tests
       uses: actions/setup-go@v3
@@ -38,7 +38,7 @@ jobs:
         go-version-file: go.mod
 
     - name: Run E2E tests
-      run: make e2e
+      run: go test -v ./e2e/...
 
     - if: failure()
       run: docker-compose ps
