Feature add API e2e tests (#16)
* feat: add e2e tests

* chore: optimizing docker-compose to run on CI and Dev

* fix: maintain only one docker-compose file

* fix: Makefile

* ci: update CI e2e tests

* update README.md

* fix: ApiClient e2e test error handling

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,19 +16,32 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version-file: go.mod
+
     - name: Build
       run: go build -v ./...
+
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./internal/...
   
   check:
     needs: build
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
-    - run: docker-compose up -d
-    - run: curl -X POST -d '{"username":"test","body":"adasd"}' http://localhost:8080/posts
+
+    - name: Run project
+      run: make ci
+
+    - name: Set up Go for E2E tests
+      uses: actions/setup-go@v3
+      with:
+        go-version-file: go.mod
+
+    - name: Run E2E tests
+      run: go test -v ./e2e/...
+
     - if: failure()
       run: docker-compose ps
+
     - if: failure()
       run: docker-compose logs
